scribbler-global.css
/* css variables*/
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900&display=swap");

:root {
  --primary-color: #000000;
  --primary-color-light: #20f1db;
  --accent-color: #FE6A6B;
  --accent-color-light: #FFE4E4;
  --accent-color-dark: #B94B4C;
  --white-color: #FAFBFC;
  --light-gray-color: #C6CBD1;
  --medium-gray-color: #959DA5;
  --dark-gray-color: #b5c4d6;
  --bg-color: #F8F8FA;
  --code-bg-color: #F0E8E8;
  --charcoal: #44b2dd;
  --persian-green: #11bfad;
  --orange-yellow-crayola: #e9c46aff;
  --sandy-brown: #f4a261ff;
  --burnt-sienna: #e76f51ff;
  --purple: #7b2cbf;
  --light-purple: #792ad9;
  --bright-green: #85cb33;
  --bud-green: #5fad56ff;
  --maximum-yellow-red: #f2c14eff;
  --coral: #f78154ff;
  --illuminating-emerald: #219806;
  --irresistible: #b4436cff;
  --brown: #99582a;
}

/* normalized */
html, body {
  padding: 0;
  /*margin-left: 130px;*/
  /*margin-right: 80px;*/
  margin-top: 1.5%;
  margin-left: 10%;
  margin-right: 10%;
  font-family: 'Open Sans', sans-serif;
  background-color: white;
}
.nav-bar-me {
  justify-content: center;
  display: flex;
}
.nav-bar-me li {
  display: inline;
  list-style-type: none;
  padding-right: 20px;
  float: left;
}

.my-name, .my-name a {
  display: flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 800;
  font-size: xx-large;
  color: var(--light-purple);
  margin-bottom: -.5vmax;
}

.my-name a:hover{
  color: var(--light-purple);
}

.nav-bar-me li a {
  display: block;
  text-align: center;
  margin-top: 1vmax;
  padding: .5vmax .6vmax;
  text-decoration: none;
  color: #a49e9e;
}

.nav-bar-me li a.nav-me-link:hover {
  color: black;
}

.nav-bar-me li a.me-active{
  color: black;
}

.nav-bar-me li a.nav-me-link {
  font-family: "Open Sans",sans-serif;
  font-weight: 700;
  font-size: 1.3vmax;
}

.underline--magical {
  background-image: linear-gradient(150deg, var(--charcoal) 0%, #b684e2 100%);
  background-repeat: no-repeat;
  background-size: 100% 0.32em;
  background-position: 0 88%;
  transition: background-size 0.25s ease-in;
  color: #050505;
}

.keyword {
  color: var(--light-purple);
}

.keyword:hover {
  color: #bf82ef;
}

p {
  font-weight: 300;
  color: #4A4A4A;
}

.social_buttons a:hover {
  text-decoration: none; !important;
  color: var(--primary-color);
}

a {
  color: var(--primary-color);
}

.intro a:hover {
  color: #959DA5; !important;
  text-decoration: none; !important;
}

.intro a{
  color: #7b2cbf;
}

.my-name a:hover {
  text-decoration: none;
}

.paper_link, .paper_link:hover {
  color: #e140f3; !important;
}

.paper_project {
  font-size: 1.4vmax;
}

/*a.pubs {*/
/*  text-decoration: none;*/
/*  color: white !important;*/
/*}*/

hr {
  padding: 1rem 0;
  border: 0;
  border-bottom: 1px solid var(--bg-color);
}

* {
  box-sizing: border-box;
}

/* global components */

/* typography */
.section__title {
  color: var(--primary-color);
}

/* code */
.code {
  border-radius: 3px;
  font-family: Space Mono, SFMono-Regular, Menlo,Monaco, Consolas, Liberation Mono, Courier New, monospace;
  background: var(--bg-color);
  border: 1px solid var(--code-bg-color);
  color: var(--primary-color-light) !important;
}

.code--block {
  white-space: pre-line;
  padding: 0 1.5rem;
}

.code--inline {
  padding: 3px 6px;
  font-size: 80%;
}

/* table */
table {
  border-collapse: collapse;
  width: 100%;
  transition: color .3s ease-out;
  margin-bottom: 2rem;
}

table td, table th {
  border: 1px solid var(--code-bg-color);
  padding: 0.8rem;
  font-weight: 300;
}

table th {
  text-align: left;
  background-color: white;
  border-color: white;
  border-bottom-color: var(--code-bg-color);
}

table td:first-child {
  background-color: var(--bg-color);
  font-weight: 600;
}

/* layout */
.wrapper {
  margin: 0 auto;
  width: 70%;
}

.footer {
  text-align: center;
  color: black;
  font-family: "Open Sans", sans-serif;
  font-size: .8vmax;
}

@keyframes fadeUp {
  0% {
    opacity: 0;
    transform: translate3d(0,30px,0);
  }
  100% {
    transform: translate3d(0,0,0);
  }
}

